webpage now allows user to send from their account to split ether between two recipients. Eth is held on contract.

--- a/app/index.html
+++ b/app/index.html
@@ -10,6 +10,13 @@
   <h3>Splitter contract contains <span class="black"><span id="balance"></span> eth</span></h3>
 
   <br>
+  <span>Your address: <code id="user-address"></code></span>
+  <br><br><label for="user1"><small>Receiver A: </small></label><input type="text" id="user1" placeholder="e.g., 0xabc"></input>
+  <br><br><label for="user2"><small>Receiver B: </small></label><input type="text" id="user2" placeholder="e.g., 0xyz"></input>
+  <br><br><label for="amount"><small>Ether: </small></label><input type="text" id="amount" placeholder="e.g., 0.95"></input>
+  <br><br><button id="send">Split</button>
+
+  <br><br>
   <span class="hint"><strong>Hint:</strong> open the browser developer console to view any errors and warnings.</span>
 </body>
 </html>
