--- a/app/index.html
+++ b/app/index.html
@@ -11,8 +11,9 @@
 
   <br>
   <span>Your address: <code id="user-address"></code></span>
-  <br><br><label for="user1"><small>Receiver A: </small></label><input type="text" id="user1" placeholder="e.g., 0xabc"></input>
-  <br><br><label for="user2"><small>Receiver B: </small></label><input type="text" id="user2" placeholder="e.g., 0xyz"></input>
+  <br><span><code id="user-balance"></code></span>
+  <br><br><label for="user1"><small>Recipient A: </small></label><input type="text" id="user1" placeholder="e.g., 0xabc"></input>
+  <br><br><label for="user2"><small>Recipient B: </small></label><input type="text" id="user2" placeholder="e.g., 0xyz"></input>
   <br><br><label for="amount"><small>Ether: </small></label><input type="text" id="amount" placeholder="e.g., 0.95"></input>
   <br><br><button id="send">Split</button>
 
